2008-12-08  Richard Henderson  <rth@redhat.com>

	PR 38240
	* tree.h (TYPE_MODE): Invoke vector_type_mode when needed.
	(SET_TYPE_MODE): New.
	* c-decl.c (parser_xref_tag): Use it.
	(finish_enum): Likewise.
	* tree.c (build_pointer_type_for_mode): Likewise.
	(build_reference_type_for_mode, build_index_type): Likewise.
	(build_range_type, make_vector_type): Likewise.
	(build_common_tree_nodes_2): Likewise.
	* stor-layout.c (compute_record_mode): Likewise.
	(finalize_type_size, layout_type, make_fract_type): Likewise.
	(make_accum_type, initialize_sizetypes): Likewise.
	(vector_type_mode): New.
	* function.c (allocate_struct_function): Call
	invoke_set_current_function_hook before querying anything else.

	* config/i386/i386.c (ix86_valid_target_attribute_inner_p): Add avx.

2008-12-08  Luis Machado  <luisgpm@br.ibm.com>

	* alias.c (find_base_term): Synch LO_SUM handling with what
	find_base_value does.

2008-12-08  Andrew Haley  <aph@redhat.com>
            Kamaraju Kusumanchi <raju.mailinglists@gmail.com>

	* gimple.h (gimple_build_try): Fix declaration.

	* builtins.c (fold_builtin_sqrt): Don't use a conditional
	operator.
	* fixed-value.c (do_fixed_add): Likewise.
	* tree-ssa-loop-ivopts.c (iv_ca_cost): Likewise.

2008-12-08  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/36802
	* omp-low.c (use_pointer_for_field): Only call maybe_lookup_decl
	on parallel and task contexts.

2008-12-07  Eric Botcazou  <ebotcazou@adacore.com>

	* gimple.c (recalculate_side_effects) <tcc_constant>: New case.

2008-12-07  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/38405
	* tree-vrp.c (simplify_truth_ops_using_ranges): Make sure to
	not sign-extend truth values.

2008-12-07  Eric Botcazou  <ebotcazou@adacore.com>

	* tree-sra.c (scalarize_use): Create another temporary with the proper
	type for signed types in the use_all && !is_output bitfield case.

2008-12-06  Steven Bosscher  <steven@gcc.gnu.org>

	PR rtl-optimization/36365